// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightCard — SR-1 flag gating (signal_design_v2) flag-OFF is byte-identical to the shipped default, and snapshot-pinned (FR-FLAG-2): flag-off food_symptom_correlation 1`] = `
<View
  accessibilityHint="Shows the evidence behind this insight"
  accessibilityLabel="A sentence."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "minHeight": 44,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 2,
          "opacity": 0.85,
          "width": 3,
        },
        {
          "backgroundColor": "#00C2A8",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0A0A0A",
              "fontSize": 15,
              "lineHeight": 22,
            },
            false,
          ]
        }
      >
        A sentence.
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "flex-start",
                "borderRadius": 6,
                "paddingHorizontal": 8,
                "paddingVertical": 3,
              },
              {
                "backgroundColor": "#FAFAFA",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 11,
                  "fontWeight": "500",
                },
                {
                  "color": "#525252",
                },
              ]
            }
          >
            Early pattern
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#737373",
              "fontSize": 11,
            }
          }
        >
          4 episodes across 4 matched days of logs
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#00C2A8",
          "fontSize": 11,
          "fontWeight": "500",
          "marginTop": 8,
        }
      }
    >
      Why we're showing this
    </Text>
  </View>
</View>
`;

exports[`InsightCard — SR-1 flag gating (signal_design_v2) flag-OFF is byte-identical to the shipped default, and snapshot-pinned (FR-FLAG-2): flag-off postprandial_timing 1`] = `
<View
  accessibilityHint="Shows the evidence behind this insight"
  accessibilityLabel="A sentence."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "minHeight": 44,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 2,
          "opacity": 0.85,
          "width": 3,
        },
        {
          "backgroundColor": "#00C2A8",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0A0A0A",
              "fontSize": 15,
              "lineHeight": 22,
            },
            false,
          ]
        }
      >
        A sentence.
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#737373",
              "fontSize": 11,
            }
          }
        >
          4 of 8 timed episodes within 30 min of eating
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#00C2A8",
          "fontSize": 11,
          "fontWeight": "500",
          "marginTop": 8,
        }
      }
    >
      Why we're showing this
    </Text>
  </View>
</View>
`;

exports[`InsightCard — SR-1 flag gating (signal_design_v2) flag-OFF is byte-identical to the shipped default, and snapshot-pinned (FR-FLAG-2): flag-off reflection 1`] = `
<View
  accessibilityHint="Shows the evidence behind this insight"
  accessibilityLabel="A sentence."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "minHeight": 44,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 2,
          "opacity": 0.85,
          "width": 3,
        },
        {
          "backgroundColor": "#00C2A8",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0A0A0A",
              "fontSize": 15,
              "lineHeight": 22,
            },
            false,
          ]
        }
      >
        A sentence.
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#737373",
              "fontSize": 11,
            }
          }
        >
          2 episodes this week, 5 last week
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#00C2A8",
          "fontSize": 11,
          "fontWeight": "500",
          "marginTop": 8,
        }
      }
    >
      Why we're showing this
    </Text>
  </View>
</View>
`;

exports[`InsightCard — SR-1 flag gating (signal_design_v2) flag-OFF is byte-identical to the shipped default, and snapshot-pinned (FR-FLAG-2): flag-off symptom_worsening 1`] = `
<View
  accessibilityHint="Shows the evidence behind this insight"
  accessibilityLabel="A sentence."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": false,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "gap": 16,
      "minHeight": 44,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 2,
          "opacity": 0.85,
          "width": 3,
        },
        {
          "backgroundColor": "#F43F5E",
        },
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0A0A0A",
              "fontSize": 15,
              "lineHeight": 22,
            },
            false,
          ]
        }
      >
        A sentence.
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#737373",
              "fontSize": 11,
            }
          }
        >
          5 episodes this week, 2 last week
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#00C2A8",
          "fontSize": 11,
          "fontWeight": "500",
          "marginTop": 8,
        }
      }
    >
      Why we're showing this
    </Text>
  </View>
</View>
`;
